# OpenJWC-webapi

./: .env.example  .gitignore  .rules  AGENTS.md  LICENSE  README.md  admins.json  main.py  pyproject.toml
app/: __init__.py  crawler_wrapper.py  worker.py
app/api/: chat.py  dependencies.py  logging_route.py  notices.py
app/core/: config.json  config.py  security.py
app/models/: models.py  schemas.py  v2_schemas.py
app/services/: ai_service.py  db_service.py  motto_service.py  prompt_engine.py  sql_db_service.py  submission_service.py  vector_db_service.py
app/utils/: logging_manager.py  openjwc_cli.py  ping_check.py  sysinfo_monitor.py
tests/: smoke_agent.py  smoke_crawler.py
tests/agent/: test_detail_tool.py  test_parser.py  test_registry.py  test_smoke.py  test_sse_stream.py
tests/crawler/: conftest.py  test_list_incremental_crawler.py  test_list_to_articles_e2e.py  test_real_web_integration.py
tests/e2e/: conftest.py  test_admin_settings_flow.py  test_apikey_register_search_flow.py  test_chat_auth_guard.py  test_submission_review_flow.py  test_user_registration_and_admin_management.py
tests/ingestion/: conftest.py  test_crawler_adapter.py  test_dedup.py  test_embedder.py  test_embedder_integration.py  test_normalizers.py  test_pipeline.py  test_tag_initializer.py  test_tag_matcher.py  test_validators.py
tests/lance_storage/: __init__.py  cli.py  conftest.py  test_connection_behavior.py  test_connection_path_resolution.py  test_data_repository.py  test_notices_performance_regression.py  test_tag_repository_integration.py  test_tag_system.py
(+105 files in other folders)
